// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Active style button renders correctly 1`] = `
<Button
  active={true}
  as="button"
  icon={true}
  onMouseDown={[Function]}
>
  <Icon
    as="i"
    name="bold"
  />
</Button>
`;

exports[`Inactive style button renders correctly 1`] = `
<Button
  active={false}
  as="button"
  icon={true}
  onMouseDown={[Function]}
>
  <Icon
    as="i"
    name="bold"
  />
</Button>
`;
